# robotica-reab-202402

./: .gitignore  .gitmodules  Dockerfile  README.md  start_simulator.sh
src/landmark_detector/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/landmark_detector/msg/: Landmark.msg
src/landmark_detector/src/landmark_detector/: amcl_pose_to_tf.py  image_detection.py  landmark_marker_publisher.py  publish_camera_parameters.py  robot_controller.py
src/landmark_detector_interfaces/: CMakeLists.txt  package.xml
src/landmark_detector_interfaces/msg/: Landmark.msg  LandmarkArray.msg
src/scripts/: image_detection.py
