<?xml version="1.0"?>
<package format="3">
  <name>landmark_detector</name>
  <version>0.0.1</version>
  <description>Landmark detection package using ROS2</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <exec_depend>landmark_detector_interfaces</exec_depend> 
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
