<?xml version="1.0"?>
<package format="3">
<name>landmark_detector_interfaces</name>
<version>0.0.1</version>
<description>Message definitions for Landmark Detector</description>
<maintainer email="someone@example.com">Your Name</maintainer>
<license>Apache License 2.0</license>

<!-- For building (compiling) the .msg files -->
<buildtool_depend>ament_cmake</buildtool_depend>
<buildtool_depend>rosidl_default_generators</buildtool_depend>

<!-- So that downstream packages can also generate or reference these interfaces -->
<build_export_depend>rosidl_default_generators</build_export_depend>
<build_export_depend>std_msgs</build_export_depend>

<!-- At runtime, we need the generated message libraries -->
<exec_depend>rosidl_default_runtime</exec_depend>
<member_of_group>rosidl_interface_packages</member_of_group>
<exec_depend>std_msgs</exec_depend>

<export>
<build_type>ament_cmake</build_type>
</export>
</package>   <!-- IMPORTANT! closing tag -->
